@@ -45,11 +45,12 @@ typedef enum {
 	EVENT_ITEM_CLICK,	//SoF+ Item Right Clicked from worn or main/top inventory slot
 	EVENT_ITEM_CLICK_CAST,
 	EVENT_GROUP_CHANGE,
-    EVENT_FORAGE_SUCCESS,
-    EVENT_FORAGE_FAILURE,
-    EVENT_FISH_START,
-    EVENT_FISH_SUCCESS,
-    EVENT_FISH_FAILURE,
+	EVENT_FORAGE_SUCCESS,
+	EVENT_FORAGE_FAILURE,
+	EVENT_FISH_START,
+	EVENT_FISH_SUCCESS,
+	EVENT_FISH_FAILURE,
+	EVENT_CLICK_OBJECT,
 	
 	_LargestEventID
 } QuestEventID;
